versioned_docs/version-2.2.0/index.mdx
---
description: Utiliser le SDK de Sline
title: SDK Sline
---

export const CartExample = () => {
    return (
        <div className="text-center">
             <div style={{display: 'flex', flexDirection: 'row', alignContent: 'center', alignItems: 'center', justifyContent: 'space-around'}}>
                <article data-sku="iphone13problue128go" style={{border: '1px solid black', padding: '8px', borderRadius: '4px'}}>
                    <figure style={{margin: '0 0 16px 0', display: 'flex', flexDirection: 'column', height: '100px'}}>
                        <div style={{flexGrow: 1, display: 'flex', alignContent: 'center', justifyContent: 'center'}}>
                            <img src="https://media.ldlc.com/r1600/ld/products/00/05/88/64/LD0005886472_1_0005927794.jpg" width="70" height="70" style={{alignSelf: 'center'}} />
                        </div>
                        <figcaption>
                            <strong>iPhone 13 Pro Bleu 128Go</strong>    
                        </figcaption>
                    </figure>
                    <div className="price text-left">
                        <strong>Prix de vente: </strong>
                        <span></span>    
                    </div>   
                    <div className="instalment text-left">
                        <strong>Mensualité: </strong>
                        <span></span>    
                    </div>    
                    <div className="quantity">
                    <span className="minus" data-sku="iphone13problue128go" style={{backgroundColor: 'black', borderBottomLeftRadius: '4px', borderTopLeftRadius: '4px', color: 'white', padding: '4px 12px'}}>-</span>
                    <input type="number" value="1" min="0" max="10" step="1" data-sku="iphone13problue128go" readOnly />
                    <span className="plus" data-sku="iphone13problue128go" style={{backgroundColor: 'black', borderBottomRightRadius: '4px', borderTopRightRadius: '4px', color: 'white', padding: '4px 12px'}}>+</span>
                    </div>
                    <div className="amount text-left">
                        <strong>Total: </strong>
                        <span></span>    
                    </div>
                    <footer>
                        <a href="#" className="btn btn-dark rounded-pill px-4 addToCart" data-sku="iphone13problue128go" id="addToCart">Ajouter au panier</a>
                    </footer>
                </article>
                <article data-sku="234234" style={{border: '1px solid black', padding: '8px', borderRadius: '4px'}}>
                    <figure style={{margin: '0 0 16px 0', display: 'flex', flexDirection: 'column', height: '100px'}}>
                        <div style={{flexGrow: 1, display: 'flex', alignContent: 'center', justifyContent: 'center'}}>
                            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Nintendo_Switch_Console.png" width="70" height="70" style={{alignSelf: 'center'}} /> 
                        </div>   
                        <figcaption>
                            <strong>Nintendo switch</strong>    
                        </figcaption>
                    </figure>
                    <div className="price text-left">
                        <strong>Prix de vente: </strong>
                        <span></span>    
                    </div>   
                    <div className="instalment text-left">
                        <strong>Mensualité: </strong>
                        <span></span>    
                    </div>    
                    <div className="quantity">
                    <span className="minus" data-sku="234234" style={{backgroundColor: 'black', borderBottomLeftRadius: '4px', borderTopLeftRadius: '4px', color: 'white', padding: '4px 12px'}}>-</span>
                    <input type="number" value="1" min="0" max="10" step="1" data-sku="234234" readOnly />
                    <span className="plus" data-sku="234234" style={{backgroundColor: 'black', borderBottomRightRadius: '4px', borderTopRightRadius: '4px', color: 'white', padding: '4px 12px'}}>+</span>
                    </div>
                    <div className="amount text-left">
                        <strong>Total: </strong>
                        <span></span>    
                    </div>
                    <footer>
                        <a href="#" className="btn btn-dark rounded-pill px-4 addToCart" data-sku="234234" id="addToCart">Ajouter au panier</a>
                    </footer>
                </article>
            </div>
            <div id="period-selector" className="text-right mt-3"/>
        </div>
    );
}

## Installation

Rajoutez la balise suivante à la fin de la section &lt;head&gt; de votre page:
```html
<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/sline-io/web-sdk@2.1/sline-sdk.min.js"></script>
```

## Initialisation
A la fin de votre &lt;body&gt;, ajoutez la ligne suivante:
```html
<script type="text/javascript">
    Sline.Initialize({
        retailer: retailerId,
        production: false,
        checkoutButton: {
          //id: 'rent-btn',
          classPath: '.addToCart',
          prefix: 'Louer à partir de ',
          suffix: '/mois',
          events: {
            customOnClickEvent: true
          }
        },
        durationSelector: {
            id: 'period-selector'
        }
      });
</script>
```

## Configuration

### Options principales
| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| retailer | String | Identifiant du marchand | Oui |
| production | Boolean | Mettre à true si vous êtes en production, sinon à false | Oui |
| checkoutButton | Object | Voir les options du [checkoutButton](#configuration-du-checkoutbutton) plus bas | Oui |
| durationSelector | Object | Voir les options du [durationSelector](#configuration-du-durationselector) plus bas | Non |

### Configuration du CheckoutButton
| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| id | String | Identifiant du bouton | Oui, si le classPath n'est pas rempli |
| classPath | String | Chemin d'accès aux boutons en CSS.<br/> Lisez le chapitre sur [l'affichage de plusieurs produits](#affichage-de-plusieurs-produits-sur-une-page). | Oui, si l'id n'est pas rempli |
| prefix | String | Texte qui apparaîtra avant le prix dans le bouton | Non |
| suffix | String | Texte qui apparaîtra après le prix dans le bouton | Non |
| events | Object | Voir la configuration des [évènements du checkoutButton](#configuration-du-checkoutbuttonevents) | Non |

### Configuration du CheckoutButton.Events
| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| customOnClickEvent | Boolean | Mettre à true si vous écoutez des évènements sur le click du bouton de checkout | Non |

### Configuration du DurationSelector
| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| id | String | Identifiant du selecteur de durée | Non |

## Variables accessibles

### Cart
Contient la liste des produits et les quantités associées
```js
Sline.cart: {product, quantity}[]
```

### Durations
Contient la liste des différentes durées de locations disponibles (en mois). La valeur -1 représente un location sans engagement
```js
Sline.durations: number[]
```

### Prices
Contient la liste des produits et les prix associés en fonction de la durée de location
```js
Sline.prices: Object
```
Voici un exemple de prix:
```js
{
    produit1: {
        durée1: {
            firstInstalmentPrice: {amount: 20000, currency: 'EUR'}
            otherInstalmentPrice: {amount: 5000, currency: 'EUR'}
        },
        durée2: {
            firstInstalmentPrice: {amount: 25000, currency: 'EUR'}
            otherInstalmentPrice: {amount: 7000, currency: 'EUR'}
        }
    }
    produit2: {
        durée1: {
            firstInstalmentPrice: {amount: 20000, currency: 'EUR'}
            otherInstalmentPrice: {amount: 5000, currency: 'EUR'}
        },
        durée2: {
            firstInstalmentPrice: {amount: 25000, currency: 'EUR'}
            otherInstalmentPrice: {amount: 7000, currency: 'EUR'}
        }
    }
}
```

## Méthodes
Voici les différentes méthodes disponibles via le SDK:

### Initialize
Initialize doit être la première méthode que vous appelez pour configurer le SDK
```js
Sline.Initialize(options)
```

### ResetCart
ResetCart permet de vider complètement le panier actuel
```js
Sline.ResetCart()
```

### AddCart
Ajoute un produit dans le panier. Si le produit est déjà présent, la quantité passée en paramètre remplacera l'ancienne valeur
```js
Sline.AddCart(item, quantity)
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| item | string | Identifiant du produit | Oui |
| quantity | Number | Nombre d'exemplaires du produit à ajouter | Oui |

### UpdateCart
Ajoute un produit dans le panier. Si le produit est déjà présent, la quantité passée en paramètre remplacera l'ancienne valeur
```js
Sline.UpdateCart(item, quantity)
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| item | string | Identifiant du produit | Oui |
| quantity | Number | Nombre d'exemplaires du produit à ajouter | Oui |

### GetPriceForProductWithDuration
Retourne le prix (formatté avec la devise) pour un produit en fonction de la durée de location et de la quantité
```js
Sline.GetPriceForProductWithDuration(item, quantity);
```

| Paramètre | Type | Description | Obligatoire |
| ---       | ---  | ---         | ---         |
| elementId | String | ID du bouton déclencheur | Oui |
| title | String | Texte qui sera injecté dans le bouton, en préfixe de "X€/mois".<br/>Valeur par défaut: "Louer à partir de " | Non |

### Affichage de plusieurs produits sur une page
Si vous affichez plusieurs produits sur une page, vous devez configurer le sdk avec le champ checkoutButton.classPath et non checkoutButton.id.
Vous devrez rajouter un attribut "data-sku" sur le bouton d'action, ainsi que sur d'éventuels boutons de gestion de quantité de produit.
<br/>Si vous souhaitez que le clic sur le bouton d'un produit ajoute simplement ce dernier au panier tout en restant sur la page, vous devez configurer le SDK avec events.customOnClickEvent = true et gérer les évènements dans votre code, y compris l'appel de la méthode AddCart.
<br/>Si vous souhaitez que le clic vous emmène directement sur la page de checkout, vous n'avez pas de configuration particulière à rajouter.

## Example
<CartExample />